Bonus 3: Altera atributos relacionado as fontes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projeto | Lessons Learned</title>
   <link rel="stylesheet" type="text/css" href="./style.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -16,17 +18,14 @@
       <a href="#">Contato</a>
     </nav>
   </header>
- 
-   <div>
+  <div>
     <section id="imagem_e_contatos">
       <img src="./me.jpg" alt="Foto de Thiago Granville" id="minha_foto" />
-    
       <nav id="contatos">
-      <a href="https://github.com/ThiagoGranville/" target="_blank">Github</a>
-      <a href="https://www.linkedin.com/in/thiagogranville/ target="_blank">LinkedIn</a>
+        <a href="https://github.com/ThiagoGranville/" target="_blank">Github</a>
+        <a href="https://www.linkedin.com/in/thiagogranville/ target=" _blank">LinkedIn</a>
       </nav>
     </section>
-  
     <section id="lista_e_tabelas">
       <ol id="licoes_aprendidas">
         <li>Unix</li>
@@ -67,9 +66,8 @@
         </tr>
       </table>
     </section>
-   </div>
-
-    <section id="artigo_aside">
+  </div>
+  <section id="artigo_aside">
     <article>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio
@@ -89,7 +87,9 @@
         sunt Lorem ipsum dolor.
       </p>
     </aside>
-    </section>
-    <footer id="rodape"><p>Todos os direitos reservados, Thiago Granville</p></footer> 
+  </section>
+  <footer id="rodape">
+    <p>Todos os direitos reservados, Thiago Granville</p>
+  </footer>
 </body>
 </html>
