adicionado NAV e css

--- a/index.html
+++ b/index.html
@@ -4,53 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <title>Lições Aprendidas</title>
 </head>
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas - Trybe</h1>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Sobre</li>
+            </ul>
+        </nav>
     </header>
     <main>
+        <div class="imgbox">
         <img id="minha_foto" src="https://user-images.githubusercontent.com/21299113/99570313-822e7e00-29b0-11eb-9806-e0cf7c4a3af1.png" alt="profile_picture">
         <a href="https://github.com/LucioOSilva" target="blank">Lucio Silva</a>
-        <ol id="licoes_aprendidas">
-            <li>Fundamentos Web</li>
-            <li>Unix & Bash</li>
-            <li>Git & Github</li>
-            <li>Internet</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Semantic HTML</li>
-            <li>Slack & Zoom</li>
-            <li>Soft Skills</li>
-            <li>Emotional intelligence</li>
-        </ol>
-        <ul id="licoes_a_aprender">
-            <li>JavaScript</li>
-            <li>React</li>
-            <li>NodeJS</li>
-            <li>CSS (Responsive)</li>
-            <li>Unit Tests</li>
-            <li>SQL</li>
-            <li>MongoDB</li>
-            <li>DevOps</li>
-            <li>Scrum</li>
-            <li>Python3</li>
-        </ul>
-        <article>
-            <h2>Um pouco sobre meu aprendizado (Trybe)</h2>
-            <p>Na Trybe adquiri muitos conhecimentos, desde o desenvolimento pessoal tratando-se de soft skills, como praticar o auto conhecimento aprimorando a
-             inteligencia emocional entre outras;  Nos últimos blocos e estudos relacionados ao "how-to-code" tive contato com Unix e Bash, também passando 
-             pelo git&github para versionamento e controle de código, aprendi também sobre os principais fundamentos da internet e como ela funciona! e ainda
-              tem muito mais por vir!! -> Muito a aprender você ainda tem! "Yoda, the master" <-
-            </p>
-        </article>
-        <aside>
-            <h2>Sobre mim:</h2>
-            <p>Estudei por um longo tempo, sem ter de fato um tutor ou alguem para me instruir de forma correta e acertiva, fiz diversos cursos e nenhum me tirou
-                 do meio do mar de informações que é a área de TI; Por fim conheci a Trybe e hoje sou muito feliz e grato por tudo. "this is the way!"
-            </p>
-        </aside>
+        </div>
+        <section id="licoes">
+            <ol id="licoes_aprendidas">
+                <li>Fundamentos Web</li>
+                <li>Unix & Bash</li>
+                <li>Git & Github</li>
+                <li>Internet</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Semantic HTML</li>
+                <li>Slack & Zoom</li>
+                <li>Soft Skills</li>
+                <li>Emotional intelligence</li>
+            </ol>
+            <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>React</li>
+                <li>NodeJS</li>
+                <li>CSS (Responsive)</li>
+                <li>Unit Tests</li>
+                <li>SQL</li>
+                <li>MongoDB</li>
+                <li>DevOps</li>
+                <li>Scrum</li>
+                <li>Python3</li>
+            </ul>
+        </section>
+        <section>
+            <article>
+                <h2>Um pouco sobre meu aprendizado (Trybe)</h2>
+                <p>Na Trybe adquiri muitos conhecimentos, desde o desenvolimento pessoal tratando-se de soft skills, como praticar o auto conhecimento aprimorando a
+                inteligencia emocional entre outras;  Nos últimos blocos e estudos relacionados ao "how-to-code" tive contato com Unix e Bash, também passando
+                pelo git&github para versionamento e controle de código, aprendi também sobre os principais fundamentos da internet e como ela funciona! e ainda
+                tem muito mais por vir!! -> Muito a aprender você ainda tem! "Yoda, the master" <-
+                </p>
+            </article>
+            <aside>
+                <h2>Sobre mim:</h2>
+                <p>Estudei por um longo tempo, sem ter de fato um tutor ou alguem para me instruir de forma correta e acertiva, fiz diversos cursos e nenhum me tirou
+                do meio do mar de informações que é a área de TI; Por fim conheci a Trybe e hoje sou muito feliz e grato por tudo. "this is the way!"
+                </p>
+            </aside>
+        </section>
     </main>
     <footer id="rodape">
         <p>Lucio Silva - All Rights Reserved</p>
