Adicionar style no historico

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <section id="perfil">
             <img id="minha_foto" src="/Images/foto.jpg" alt="Foto de Gabriel">
             <section id="minhas-licoes">
+                <p><strong>Lições aprendidas e Lições a aprender</strong></strong></p>
                 <ol id="licoes_aprendidas">
                     <li>Introdução Unix e Shell</li>
                     <li>BASH</li>
@@ -61,7 +62,7 @@
         <article id="artigo">
             <!--https://gabrielgarciamendonca.github.io/   |   Meu portfólio foi utilizado para buscar alguns textos acerca dos locais no qual eu estudei.-->
             <h2>Historico</h2>
-            <section>
+            <section class="cartao_apresentacao">
                 <h3>2019</h3>
                 <p><strong>Escola: </strong>IFSP</p>
                 <p><strong>Curso: </strong>Análise e Desenvolvimento de Sistemas.</p>
@@ -71,7 +72,7 @@
                     instituto
                     focado e perfeito, e além do mais, em constante contato com a tecnologia de ponta.</p>
             </section>
-            <section>
+            <section class="cartao_apresentacao">
                 <h3>2020</h3>
                 <p><strong>Escola: </strong>Trybe</p>
                 <p><strong>Curso: </strong>Desenvolvedor de Software</p>
