--- a/index.html
+++ b/index.html
@@ -1,74 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lessons Learned | Trybe</title>
 
     <link rel="stylesheet" href="style.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <header id="cabecalho">
-        <h1 id="titulo">Lessons Learned | Trybe</h1>
+      <h1 id="titulo">Lessons Learned | Trybe</h1>
     </header>
-
-    <main>
+    <div id="corpo">
+      <main>
         <section id="sec-foto">
-            <figure>
-                <a href="https://www.instagram.com/matheusmrtno/" target="_blank"><img id="minha_foto"
-                        src="minha_foto.jpeg" alt="Minha foto de perfil" /></a>
-                <figcaption>Clique na foto para acessar meu instagram</figcaption>
-            </figure>
+          <figure>
+            <a href="https://www.instagram.com/matheusmrtno/" target="_blank"
+              ><img
+                id="minha_foto"
+                src="minha_foto.jpeg"
+                alt="Minha foto de perfil"
+            /></a>
+            <figcaption>Clique na foto para acessar meu instagram</figcaption>
+          </figure>
         </section>
 
         <section id="licoes">
-            <div id="div-aprendidas">
-                <ol id="licoes_aprendidas">
-                    <li>Unix</li>
-                    <li>Bash</li>
-                    <li>Git</li>
-                    <li>GitHub</li>
-                    <li>Internet</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Semântica</li>
-                    <li>Acessibilidade</li>
-                    <li>Inspect</li>
-                </ol>
-            </div>
+          <div id="div-aprendidas">
+            <ol id="licoes_aprendidas">
+              <li>Unix</li>
+              <li>Bash</li>
+              <li>Git</li>
+              <li>GitHub</li>
+              <li>Internet</li>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Semântica</li>
+              <li>Acessibilidade</li>
+              <li>Inspect</li>
+            </ol>
+          </div>
 
-            <div id="div-aprender">
-                <ul id="licoes_a_aprender">
-                    <li>JavaScript</li>
-                    <li>Responsividade</li>
-                    <li>Jest</li>
-                    <li>RTL</li>
-                    <li>Redux</li>
-                    <li>API</li>
-                    <li>SQL</li>
-                    <li>MongoDB</li>
-                    <li>NodeJS</li>
-                    <li>Rest</li>
-                </ul>
-            </div>
+          <div id="div-aprender">
+            <ul id="licoes_a_aprender">
+              <li>JavaScript</li>
+              <li>Responsividade</li>
+              <li>Jest</li>
+              <li>RTL</li>
+              <li>Redux</li>
+              <li>API</li>
+              <li>SQL</li>
+              <li>MongoDB</li>
+              <li>NodeJS</li>
+              <li>Rest</li>
+            </ul>
+          </div>
         </section>
 
         <article>
-            <p>
-                A formação Trybe é 100% online e conta com aulas ao vivo, onde você interage com sua turma diariamente. Você pode fazer toda sua formação de qualquer local, desde que tenha disponibilidade de segunda a sexta, de 14h às 20h, horário de Brasília, e conquiste a aprovação no processo seletivo da Trybe. Duração aproximada de 12 meses com carga horária de 1.500 horas. Na Trybe você vai adquirir o conhecimento técnico e as soft skills necessárias para construir uma carreira de sucesso em desenvolvimento web e conecte se com o mercado de trabalho.
-            </p>
+          <p>
+            A formação Trybe é 100% online e conta com aulas ao vivo, onde você
+            interage com sua turma diariamente. Você pode fazer toda sua
+            formação de qualquer local, desde que tenha disponibilidade de
+            segunda a sexta, de 14h às 20h, horário de Brasília, e conquiste a
+            aprovação no processo seletivo da Trybe. Duração aproximada de 12
+            meses com carga horária de 1.500 horas. Na Trybe você vai adquirir o
+            conhecimento técnico e as soft skills necessárias para construir uma
+            carreira de sucesso em desenvolvimento web e conecte se com o
+            mercado de trabalho.
+          </p>
         </article>
         <aside>
-            <p>
-                Estudo desenvolvimento de software na Trybe, uma escola que estimula os alunos a trabalharem em equipe, simulando situações reais de trabalho em um time de desenvolvimento.
-            </p>
+          <p>
+            Estudo desenvolvimento de software na Trybe, uma escola que estimula
+            os alunos a trabalharem em equipe, simulando situações reais de
+            trabalho em um time de desenvolvimento.
+          </p>
         </aside>
-    </main>
+      </main>
 
-
-    <footer id="rodape"></footer>
-</body>
-
+      <footer id="rodape"></footer>
+    </div>
+  </body>
 </html>
