--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=1366, height=768" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lessons Learned</title>
     <link rel="stylesheet" href="style.css">
   </head>
