Resolvendo erro do requisito 9

--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
       <li>Algoritmos e estrutura de dados</li>
     </ul>
   </section>
-  <aside>
-    Só um dos vários momentos na trybe. Enquanto eu realizava um dos exercícios propostos, o código simplesmente parou funcionar, orei para pelo menos três santos diferentes, até que um me iluminou, eu havia esquecido de fechar um dos parênteses.
-  </aside>
+  <section>
+    <aside>
+      Só um dos vários momentos na trybe. Enquanto eu realizava um dos exercícios propostos, o código simplesmente parou funcionar, orei para pelo menos três santos diferentes, até que um me iluminou, eu havia esquecido de fechar um dos parênteses.
+    </aside>
+  </section>
   <section>
     <p>Link para acessar meu perfil no <a href="https://github.com/marcusWittho" target="_blank">GitHub</a> e acompanhar meu desenvolvimento durante o curso.</p>
   </section>
