--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <section>
       <img id="minha_foto" src="dani.png" alt="Fodo de perfil de uma pessoa" width="200">
     </section>
-    <section>
+    <section class="aprendidas">
+      <h2>Lições aprendidas</h2>
       <ol id="licoes_aprendidas">
         <li>Unix & Bash</li>
         <li>Git</li>
@@ -33,7 +34,8 @@
         <li>Slido</li>
       </ol>
     </section>
-    <section>
+    <section class="aprender">
+      <h2>Lições a aprender</h2>
       <ul id="licoes_a_aprender">
         <li>JavaScript</li>
         <li>DOM</li>
@@ -48,16 +50,18 @@
       </ul>
     </section>
     <section id="aticle-content">
-      <article>
+      <article class="artigo">
+        <h2>Sobre o meu aprenizado</h2>
         <p>Estou tendo a oportunidade de aprender programação como nunca tive. Até o momento aprendi com profundidade sobre Bash, Git e GitHub, que são aplicados utilizando o terminal. Vi como tudo ocorre por trás dos panos na internet, como ela funciona ao fazermos uma simples pesquisa. Também aprendi sobre HTML e CSS, e hoje estou aplicando o meu aprendizado construindo esse porrifólio.</p>
       </article>
     </section>
     <section id="aside-content">
-      <aside>
+      <aside class="artigo">
+        <h2>O caminho...</h2>
         <p>A primeira vez que vi sobre Git e GitHub, confesso que fiquei meio preocupada em como eu iria aprender e lembrar de tudo, isso foi antes da Trybe, agora com as aulas e o conteúdo, ficou bem mais fácil de assimilar e a prática do dia a dia ajuda bastante também.</p>
       </aside>
     </section>
-    <section>
+    <section id="table">
       <table>
         <tr>
           <td>Daniela</td>
