Barra superior com um título

--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-
+    <title> <h1>cabecalho</h1> </title>
+      <hi> </hi>
+    </title>
   <link rel="stylesheet" type="css"  href="style.css"/>
 
 </head>
 
+<body>
+  <head id="cabecalho"> Titulo teste</head>
+  <h1 id="titulo"></h1>
 
+  </head>
+</body>
 
 </html>
