Ajustando id's licoes

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <img id="minha_foto" src="https://avatars3.githubusercontent.com/u/47483029?s=460&u=cdf0eba4ef59445b6b241ba53927707198095d97&v=4" alt="Foto-Diego">  
     </section>
     <main class="lista">
-        <section id="licoes_aprendidas">
+        <section id="lista_licoes_aprendidas">
             <h2 class="titulos">Lições Aprendidas</h2>
-            <ol>
+            <ol id="licoes_aprendidas">
                 <li>Zoom</li>
                 <li>Unix</li>
                 <li>Conceito de Internet</li>
@@ -28,9 +28,9 @@
                 <li>CSS</li>
             </ol>
         </section>
-        <section id="licoes_a_aprender">
+        <section id="lista_licoes_aprendidas" >
             <h2 class="titulos">Lições a Aprender</h2>
-            <ul>
+            <ul id="licoes_a_aprender">
                 <li>Lógica de Programação</li>
                 <li>Javascript</li>
                 <li>Dom</li>
