--- a/index.html
+++ b/index.html
@@ -69,6 +69,6 @@
             </aside>
         </div>
     </main>
-    <footer id="rodape"> by <a href="https://www.linkedin.com/in/johne-alves/" target="blanch">Johne Alves</a></footer>
+    <footer id="rodape"> by Johne Alves: <a href="https://www.linkedin.com/in/johne-alves/" target="_blank">LinkedIn</a></footer>
 </body>
 </html>
