Bonus 4: posiciona aside e article

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </section>
   </div>
   <section id="artigo_aside">
-    <article>
+    <article classe="lado-esquerdo">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio
         quis officia perferendis. Esse consectetur tenetur aspernatur voluptas
@@ -79,7 +79,7 @@
         Molestiae sapiente non pariatur.
       </p>
     </article>
-    <aside>
+    <aside classe="lado-direito">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio
         quis officia perferendis. Esse consectetur tenetur aspernatur voluptas
