--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main>
         <section>
             <div>
+                <h3>lições aprendidas</h3>
                 <ol id="licoes_aprendidas">
                     <li>Linux</li>
                     <li>Html</li>
@@ -27,7 +28,8 @@
                     <li>GitHub</li>
                 </ol>
             </div>
-            <div>
+            <div> 
+                <h3>Lições a aprender</h3>
                 <li id="licoes_a_aprender">
                     <li>NodeJS</li>
                     <li>JavaScript</li>
@@ -38,6 +40,7 @@
                     <li>Express</li>
                     <li>Empatia</li>
                     <li>MongoDB</li>
+                    <li>Coperação</li>
                 </li>
             </div>
         </section>
