--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 </header>
 <body>
     <img src="rsz_brunaferreira.jpg" id="minha_foto">
+<article>
+    <p>Comecei a desenvolver praticamente do 0. Não tinha quase nada de conhecimento sobre Desenvolvimento Web, não sabia nem mexer no terminal, mas agora já sei! Já sei também até a usar o GitHub, quem diria...
+       Agora, tenho uma boa base de conhecimento sobre HTML e CSS, ainda estou muito longe de "chegar lá", mas já fiz muito mais do que poderia imaginar há 3 semanas atrás.
+       Estou muito animada com o que tem pela frente! 
+    </p>
+</article>
+<aside>
+    <p>
+        Antes de começar a Trybe, quando vi o GitHub pela primeira vez, imaginei que nunca iria entendê-lo. Mas hoje consigo usá-lo e manusear alguns de seus mecanismos, e tem sido muito rápido o meu desenvolvimento com ele. Aprendi tudo na Trybe.
+    </p>
+</aside>
+<section>
     <ol id="licoes_aprendidas">
         <li>Conhecer o Unix, Shell e Bash</li>
         <li>Usar o terminal</li>
@@ -23,6 +35,8 @@
         <li>Usar o VS Code</li>
         <li>Trabalhar com maior efetividade no HTML e CSS</li>
     </ol>
+</section>
+<section>
     <ul id="licoes_a_aprender">
         <li>Entender muito bem o JavaScript</li>
         <li>Ter muitas habilidades com HTML e CSS</li>
@@ -35,7 +49,10 @@
         <li>Desenvolver meus projetos e aperfeiçoá-los </li>
         <li>Estar pronta para trabalhar como Dev Front-end</li>
     </ul>
+</section>
+<nav>
     <p><a href="https://eucurtoviajar.com/"target=_blank >Acesse o meu Blog!</a></p>
+</nav>
     <footer id="rodape">
     </footer>
 </body>
