--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições que aprendi </h1>
-    </header>
+		<nav class="Menu">
+			<u>
+				<li><a href=""> Contato</a></li>
+				<li><a href="https://www.betrybe.com/" target="_blank"> Sobre a Trybe</a></li>
+			</u>
+		</nav>
+	</header>
 	<img src="./images/pedro.jpg" alt="Foto do Pedro durante a noite" id="minha_foto">
 	<section id="lists">
 		<ol id="licoes_aprendidas">
@@ -37,7 +43,7 @@
 		</ul>
 	</section>
 		<article id="my-learning">
-        <h2>Meu Aprendizado:</h2>
+        <h2>Meu Aprendizado</h2>
         <p>Quando eu inícei os estudos na trybe, conhecia muito pouco sobre o mundo de desenvolvimento web, na primeira semana eu comecei a ter aulas sobre terminal e git, mesmo já sabendo um pouco dessas ferramentas, a trybe me deu os mecanismos para consolidar ainda mais o meu conhecimento. Logo após comecei a ter aulas sobre internet, <i>HTML</i>, <i>CSS</i> e <i>HTML Semântico</i>. Desde então sinto muita segurança em todo o conteúdo que ja vi até aqui, consigo compreender uma pagina HTML, e fazer paginas semanticamente corretas, além de aplicar um bom CSS nelas.</p>
 	</article>
 	<aside>
