--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   </head>
   <body>
       <header id="cabecalho">
-          <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+          <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
           <nav id="menu_link">
-              <a href="">Home</a>
+              <a href="index.html" target="_blanc">Home</a>
               <a href="">Login</a>
           </nav>
       </header>
       <img id="minha_foto" src="retrato1.png" alt="foto rafael azevedo"><br>
-      <a href="https://github.com/RafaelBiatoAzevedo" target="_blanc">Rafael Azevedo</a>
+      <a href="https://github.com/tryber/sd-09-project-lessons-learned/blob/master/exemplo.png" target="_blanc">Rafael Azevedo</a>
       <table>
           <tr>
               <td>
