Entrega de requisito 14 e 15.

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Lições Aprendidas</title>
 </head>
 <body>
     <header id="cabecalho">
-        <h1>Lições Aprendidas</h1>
+        <h1 id="titulo">Lições Aprendidas</h1>
     </header>
-    <main>
+    <main id="pagina-principal">
         <img id="minha_foto" src="foto.jpg" alt="Foto Felipe Rocha">
-        <section>
+        <section id="listas">
             <h2>Lições</h2>
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
@@ -40,12 +40,12 @@
                 <li>Unit Tests</li>
             </ul>
         </section>
-        <article id="artigo-aprendizado">
+        <article id="lado-esquerdo">
             <h2>Meu Aprendizado</h2>
             <p>No dia 9 de novembro iniciei minha jornada na <a href="https://www.betrybe.com/" target="_blank">Trybe</a>, uma escola para pessoas que querem construir uma carreira como desenvolvedor full stack. O diferencial que me fez optar pela Trybe é o seu comprometimento com os alunos, no qual os mesmos podem optar pelo pagamento através do modelo de sucesso compartilhado.</p>
             <p>Durante as três semanas iniciais aprendemos sobre os fundamentos do desenvolvimento web, Unix, Git, Github, funcionamento da internet, HTML e CSS. Realizamos a criação da primeiras páginas HTML, que são o primeiro passo para se tornar um desenvolvedor web full stack.</p>
         </article>
-        <aside id="artigo-lateral">
+        <aside id="lado-direito">
             <h2>Hard e Soft Skills</h2>
             <p>No inicio do curso somos apresentados aos termos hard skills (capacitações técnicas) e soft skills (habilidades comportamentais). Aprendemos que as habilidades comportamentais são tão importantes quanto as técnicas, e que é necessário um treinamento continuo para ambas.</p>
             <table>
