Adicionar melhorias no style do perfil

--- a/index.html
+++ b/index.html
@@ -29,33 +29,30 @@
     <main id="conteudo">
         <section id="perfil">
             <img id="minha_foto" src="/Images/foto.jpg" alt="Foto de Gabriel">
-            <section id="minhas-licoes">
-                <p><strong>Lições aprendidas e Lições a aprender</strong></strong></p>
-                <ol id="licoes_aprendidas">
-                    <li>Introdução Unix e Shell</li>
-                    <li>BASH</li>
-                    <li>Conceitos de internet</li>
-                    <li>GIT</li>
-                    <li>GITHUB</li>
-                    <li>HTML - Introdução</li>
-                    <li>HTML - Estrutura de página</li>
-                    <li>CSS - Introdução</li>
-                    <li>CSS - Seletores e Posicionamento</li>
-                    <li>HTML - Semântico</li>
-                </ol>
-                <ul id="licoes_a_aprender">
-                    <li>Javascript</li>
-                    <li>React</li>
-                    <li>HTML e CSS responsivos</li>
-                    <li>Javascript ES6</li>
-                    <li>Javascript assincrono</li>
-                    <li>Testes automatizados com JEST</li>
-                    <li>Metodologias ageis</li>
-                    <li>Gerenciamento de estado com Redux</li>
-                    <li>Context API</li>
-                    <li>React Hooks</li>
-            </section>
-
+            <p><strong>Lições aprendidas e Lições a aprender</strong></p>
+            <ol id="licoes_aprendidas">
+                <li>Introdução Unix e Shell</li>
+                <li>BASH</li>
+                <li>Conceitos de internet</li>
+                <li>GIT</li>
+                <li>GITHUB</li>
+                <li>HTML - Introdução</li>
+                <li>HTML - Estrutura de página</li>
+                <li>CSS - Introdução</li>
+                <li>CSS - Seletores e Posicionamento</li>
+                <li>HTML - Semântico</li>
+            </ol>
+            <ul id="licoes_a_aprender">
+                <li>Javascript</li>
+                <li>React</li>
+                <li>HTML e CSS responsivos</li>
+                <li>Javascript ES6</li>
+                <li>Javascript assincrono</li>
+                <li>Testes automatizados com JEST</li>
+                <li>Metodologias ageis</li>
+                <li>Gerenciamento de estado com Redux</li>
+                <li>Context API</li>
+                <li>React Hooks</li>
             </ul>
         </section>
 
