--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas - Trybe</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li>|</li>
+                <li><a href="#licoes">Lições</a></li>
+                <li>|</li>
+                <li><a href="#meu_aprendizado">Meu Aprendizado</a></li>
+            </ul>
+        </nav>
     </header>
     <div class="container">
         <section>
@@ -23,33 +32,59 @@
             <h2>João Henrique R.Sá</h2>
         </section>
         <section>
-            <h2>Lições</h2>
-            <h4>Aprendidas</h4>
-            <ol id="licoes_aprendidas">
-                <li>Unix</li>
-                <li>Git</li>
-                <li>Github</li>
-                <li>Empatia</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Inpect</li>
-                <li>Semantic HTML</li>
-                <li>Slack</li>
-                <li>Zoom</li>
-            </ol>
-            <h4>A aprender</h4>
-            <ul id="licoes_a_aprender">
-                <li>CI/CD</li>
-                <li>Server Monitoring</li>
-                <li>Unit Tests</li>
-                <li>Tests E2E</li>
-                <li>HOF</li>
-                <li>React</li>
-                <li>Nodejs</li>
-                <li>SQL</li>
-                <li>Sequelize</li>
-                <li>CSS Responsive</li>
-            </ul>
+            <h2 id="licoes">Lições</h2>
+            <div class="wrapper_licoes ">
+                <h4>Aprendidas</h4>
+                <ol id="licoes_aprendidas">
+                    <li>Unix</li>
+                    <li>Git</li>
+                    <li>Github</li>
+                    <li>Empatia</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Inpect</li>
+                    <li>Semantic HTML</li>
+                    <li>Slack</li>
+                    <li>Zoom</li>
+                </ol>
+            </div>
+            <div class="wrapper_licoes">
+                <h4>A aprender</h4>
+                <ul id="licoes_a_aprender">
+                    <li>CI/CD</li>
+                    <li>Server Monitoring</li>
+                    <li>Unit Tests</li>
+                    <li>Tests E2E</li>
+                    <li>HOF</li>
+                    <li>React</li>
+                    <li>Nodejs</li>
+                    <li>SQL</li>
+                    <li>Sequelize</li>
+                    <li>CSS Responsive</li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <h2 id="meu_aprendizado">Meu aprendizado</h2>
+            <article>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo corporis temporibus amet corrupti
+                quasi
+                incidunt recusandae modi voluptate numquam optio, earum nulla! Quam ea deserunt quas temporibus
+                distinctio
+                porro iusto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde qui quos repudiandae ut
+                praesentium omnis ipsa saepe, laborum sint. Autem dolore excepturi aspernatur rem consequuntur
+                voluptatibus
+                doloribus culpa distinctio sequi!
+            </article>
+        </section>
+        <section>
+            <h2>Uma passagem sobre meu aprendizado</h2>
+            <aside>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime tempore commodi voluptatem rem qui
+                mollitia
+                odio excepturi suscipit enim laborum, tenetur fuga ad nostrum itaque, aut accusantium deleniti aliquid
+                doloribus.
+            </aside>
         </section>
     </div>
     <footer id="rodape">
