--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
         <img id="minha_foto" src="/minhaimg.jpeg" alt="minha foto" />
       </figure>
       <section>
-        <a href="https://github.com/GabriellCastro" target="_blank"
+        <a
+          id="link_github"
+          href="https://github.com/GabriellCastro"
+          target="_blank"
           >Meu Github 👈</a
         >
       </section>
