Tamanho da fonte e cor para titulos h2 e h3

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <img src="/sauloimg.jpeg" alt="Imagem de Saulo Kirchmaier" id="minha_foto">
             </div>
 
-            <section class="conteudo">
+            <section class="lista-conteudo">
                     <h2>Estudado</h2>
                     <ol id="licoes_aprendidas">
                         <li>Unix/Shell</li>
@@ -44,7 +44,7 @@
                     </ol>
             </section>
 
-            <section class="conteudo">
+            <section class="lista-conteudo">
                 <h2>A estudar</h2>
                 <ul id="licoes_a_aprender">
                     <li>JavaScript</li>
