Added aside and section (Requisites 9 and 10)

--- a/index.html
+++ b/index.html
@@ -11,31 +11,34 @@
     <img id="minha_foto" src="images/minha_foto.jpg" alt="">
     <br>
     <a href="https://www.linkedin.com/in/pauloeliezerg/" target="_blank">Paulo Eliezer</a>
-    <ol id="licoes_aprendidas">
-        <li>Unix</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Slack</li>
-        <li>Zoom</li>
-        <li>HTML Semântico</li>
-        <li>Empatia</li>
-        <li>Inspeção de elementos HTML</li>
-    </ol>
-    <ul id="licoes_a_aprender">
-        <li>Apresentação de seminários</li>
-        <li>JavaScript</li>
-        <li>CSS Responsivo</li>
-        <li>SQL</li>
-        <li>NodeJS</li>
-        <li>Unit Tests</li>
-        <li>React</li>
-        <li>Forms</li>
-        <li>DOM</li>
-        <li>ES6</li>
-    </ul>
+    <section id="listas">
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Slack</li>
+            <li>Zoom</li>
+            <li>HTML Semântico</li>
+            <li>Empatia</li>
+            <li>Inspeção de elementos HTML</li>
+        </ol>
+        <ul id="licoes_a_aprender">
+            <li>Apresentação de seminários</li>
+            <li>JavaScript</li>
+            <li>CSS Responsivo</li>
+            <li>SQL</li>
+            <li>NodeJS</li>
+            <li>Unit Tests</li>
+            <li>React</li>
+            <li>Forms</li>
+            <li>DOM</li>
+            <li>ES6</li>
+        </ul>
+    </section>
     <article>O aprendizado na Trybe se dá de forma gradual, organizada e satisfatória. A curva de aprendizado é surpreendente: vamos dos fundamentos do Unix ao patamar de Desenvolvedor Full Stack (mais de 1500 horas de curso) em cerca de 1 ano! Contando com uma equipe sempre bastante suportiva e interessada em ajudar e aprender, trata-se de uma experiência única e bastante edificante.</article>
+    <aside>Em cerca de 1 mês de curso a turma 9 já está desenvolvendo seu primeiro projeto após sermos apresentados aos conceitos de Bash, Git, HTML e CSS!</aside>
     <footer id="rodape">Aqui está meu rodapé!</footer>
 </body>
 </html>
