Requisitos 7 & 8 | Erros codeclimate resolvidos

--- a/index.html
+++ b/index.html
@@ -46,10 +46,22 @@
 
   </section>
 
+  <article id="meu_aprendizado">
+    <section>
+      <h3>Experiências</h3>
+        <p>
+          Este é o primeiro projeto que faço, como aluno da Trybe e estou muito feliz com o resultado, até agora. 
+          Para realização dessa atividade, foi necessário aprender conceitos básicos de Unix & Bash, Internet, Git & GitHub, HTML Semântico e CSS.
+          Exercendo o método de ensino proposto pela Trybe, pude aprimorar, não apenas minhas habilidades técnicas, mas também posso afirmar: estou <strong>aprendendo</strong> a aprender.
+          Sinto que evoluí <strong>bastante</strong> desde o meu primeiro dia e estou mais do que preparado para seguir adiante!
+        </p>
+    </section>
+  </article>
+
   <footer id="rodape">
     <table id="contato">
       <tr>
-        <td><a href="https://github.com/qu4k3r" target="blank">Autor: Lucas Neves</a></td>
+        <td><a href="https://github.com/qu4k3r" target="_blank">Autor: Lucas Neves</a></td>
       </tr>
     </table>
   </footer>
