--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
               </td>
           </tr>
       </table>
-      <article class="lado_esquerdo">
+      <article class="lado-esquerdo">
             <h3>Meu Aprendizado na Trybe</h3>
             <p>Reforçei tudo o sabia de linux, aprendi ferramentas ótimas de comunicação como Zomm e slack que irão me ajudar muito na minha caminhadada. Aprendi Git e GitHub para controlar o versionamento do meu código e por fim HTML para estruturar minhas páginas, CSS para estiliza-las e Semantic HTML para melhorar a navegabilidade e auxiliar a acessibilidade. </p>
       </article>
-      <section class="lado_direito">
+      <section class="lado-direito">
          <aside>
               <p>Comecei minha jornada em TI com 9 anos,com 17 anos fiz um courso técnico de manutenção e instalação de softwares.Aos 19 fiz gradução em Análise de Sistema na Puc-Campinas e atualmente em 2020 iniciei Desenvolvimento web na Trybe. VQV!</p>
          </aside>
