--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 id="titulo">Lessons Learned Project</h1>
     </header>
     <img src="pablo.jpeg" alt="foto de uma pessoa" id="minha_foto">
-    <section id="lessons">
+    <section>
         <ol id="licoes_aprendidas">
             <li>HTML</li>
             <li>CSS</li>
@@ -44,8 +44,7 @@
     <aside id="lado-direito">
         <p>When I've heard of Trybe for first time, I was unbeliver. I thought that they were something like hijacking. But when I studied deeper the people who work here, I convince myself that my future was here.Today, I'm studying hard to become a elite software develop with Trybe help.</p>
     </aside>
-    
-    <table class="tables-styles">
+    <table>
         <thead>Cabecalho da tabela</thead>
         <body>
             <tr>
@@ -58,7 +57,9 @@
             </tr>
         </body>
     </table>
-    <a href="https://trybe.com.br" target="_blank"> Clique here to meet who is making this magic happen.</a>
+    <nav id="links-importantes">
+        <a href="https://trybe.com.br" target="_blank"> Clique here to meet who is making this magic happen.</a>
+    </nav>
     <footer id="rodape">
         <p>This my foot</p>
     </footer>
