section tag fix

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                     <h3>Por exemplo...</h3>
                     <img id="okay" src="okayhand.jpg" alt="ate agora tudo certo">
                     <p id="exemplo">Esses dias eu terminei meu web portfolio (cujo link você pode acessar por <a href="https://lhfmworker.github.io/" target="_blank">aqui</a>)</p>
+                </section>
             </aside>
             <footer id="rodape">
                 <p>Conteúdo desenvolvido por: <a href="https://lhfmworker.github.io" target="_blank">Luiz Henrique</a></p>
