--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
@@ -9,45 +13,76 @@
   <header id="cabecalho">
     <h1 id="titulo">Lições aprendidas - Trybe</h1>
     <nav>
-      <a href="" >Inicio</a>
+      <a href="/" >Inicio</a>
       <a href="https://github.com/edersonrdg" target="_blank">Meu github</a>
     </nav>
   </header>
   <div id="page_content">
   <main>
-    <h1>Sobre mim</h1>
+    <div id="main_content">
     <img src='./assets//Screenshot_20200825-124946_Gallery.jpg' alt="Ederson image" id="minha_foto" width="200px">
-    <div id="list_content">
-    <ol>
-      <li>Unix</li>
-      <li>Git</li>
-      <li>Github</li>
-      <li>Empatia</li>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Slack</li>
-      <li>Zoom</li>
-      <li>Inspec</li>
-      <li>Semantic HTML</li>
-    </ol>
-    <ul>
-      <li>Javascript</li>
-      <li>DOM</li>
-      <li>Forms</li>
-      <li>CSS Responsive</li>
-      <li>ES6</li>
-      <li>HOF</li>
-      <li>Unit Tests</li>
-      <li>React</li>
-      <li>Node</li>
-      <li>SQL</li>
-    </ul>
+    <div class="article_content">
+      <div id="sub_title main">
+        <h2 class="sub_title">Sobre mim</h2>
+      </div>
+    <article>
+      <p>Olá, me chamo Ederson rodrigo da silva lopes, tenho 19 anos e moro em fortaleza, capital do ceará.
+        em novembro de 2020 entrei para escola de programação Trybe, onde eu me matriculei no intuito de obter um
+        conhecimento mais profissional sobre desenvolvimento de softwares. Desde 2019 tenho um sonho de poder trabalhar
+        desenvolvendo softwares, pois naminha visão, é uma área da tecnologia que trabalha tanto o raciocínio quanto a imaginação e
+        é este fato que me motiva a querer trabalhar com isso.
+      </p>
+    </article>
+  </div>
   </div>
   </main>
   <aside>
-    <h2>SideBar</h2>
+    <h2 class="sub_title">Aprendizados</h2>
+    <section>
+      <ul>
+        <li>Comecei a entender sobre linux e Unix</li>
+        <li>Entendi mais sobre como funciona a web por baixo dos panos</li>
+        <li>Aprendi conceitos sobre git</li>
+        <li>Fixei mais conhecimentos sobre git e aprendi sobre github</li>
+        <li>Tive uma breve introdução sobre HTML com apresentação de algumas tags</li>
+        <li>Aprendi mais sobre tags no HTML e tive umaintrodução sobre CSS</li>
+        <li>Fixei muitos comandos e propriedades do Html e css</li>
+        <li>Aprendi sobre os conceitos de HTML semântico</li>
+      </ul>
+    </section>
   </aside>
 </div>
-<footer><H4>Direitos reservados, Ederson</H4></footer>
+<div id="list_content">
+  <h2 class="sub_title">Lições</h2>
+  <div id="list_content">
+  <ol id="licoes_aprendidas">
+    <h3>lições aprendidas</h3>
+    <li>Unix</li>
+    <li>Git</li>
+    <li>Github</li>
+    <li>Empatia</li>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>Slack</li>
+    <li>Zoom</li>
+    <li>Inspec</li>
+    <li>Semantic HTML</li>
+  </ol>
+  <ul id="licoes_a_aprender">
+    <h3>Lições que desejo aprender</h3>
+    <li>Javascript</li>
+    <li>DOM</li>
+    <li>Forms</li>
+    <li>CSS Responsive</li>
+    <li>ES6</li>
+    <li>HOF</li>
+    <li>Unit Tests</li>
+    <li>React</li>
+    <li>Node</li>
+    <li>SQL</li>
+  </ul>
+</div>
+</div>
+<footer id="rodape"><H4>Direitos reservados, Ederson</H4></footer>
 </body>
 </html>
