--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <link href="style.css" rel="stylesheet" type="text/css">
     <meta width = screen.width>
+    <title>Projeto 1 Trybe</title>
 </head>
 <body>
     <header id = "cabecalho"><h1 id = "titulo">Titulo</h1></header>
     <nav>Listas Artigos Tabela</nav>
-    <img id = "minha_foto" src = "rpufal.png">
+    <img id = "minha_foto" src = "rpufal.png" alt = "foto de perfil">
     <section>
     <ol id = "licoes_aprendidas">
         <li>Bash</li>
