ajustando requisito 14 fontes

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <main>
         <table id="licoes">
+            <tr><th>Lições</th></tr>
             <td>
                 <ol id="licoes_aprendidas">
                     <li>Unix</li>
