--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <header id="cabecalho">
-            <h1 id="titulo">Giovani Lopes Diccini</h1>
-            <nav>
+            <h1 id="titulo">Lessons Learned</h1>
+            <nav id="navigation">
                 <ul>
                     <li><a href="#article">Artigo</a></li>
                     <li><a href="#rodape">Rodapé</a></li>
@@ -17,30 +17,39 @@
             </nav>
         </header>
         <img id="minha_foto" src="giovani.jpeg" alt="imagem_autor">
-        <ol id="licoes_aprendidas">
-            <li>HTML;</li>
-            <li>CSS;</li>
-            <li>SEO;</li>
-            <li>Acessibilidade;</li>
-            <li>HTML SEMÂNTICO;</li>
-            <li>GIT;</li>
-            <li>INTERNET;</li>
-            <li>SOFT SKILLS;</li>
-            <li>GITHUB;</li>
-            <li>Pesquisar como um dev;</li>
-        </ol>
-        <ul id="licoes_a_aprender">
-            <li>JavaScript;</li>
-            <li>React;</li>
-            <li>NodeJS;</li>
-            <li>Python;</li>
-            <li>Estrutura de dados;</li>
-            <li>Algorítimos;</li>
-            <li>Testes Unitários;</li>
-            <li>Programação orientada a objetos;</li>
-            <li>Arquitetura de Computadores e Redes;</li>
-            <li>Banco de dados;</li>
-        </ul>
+        <section id="lists">
+            <div id="lista-aprendidas">
+                <h2>Lições aprendidas</h2>
+                    <ol id="licoes_aprendidas">
+                        <li>HTML;</li>
+                        <li>CSS;</li>
+                        <li>SEO;</li>
+                        <li>Acessibilidade;</li>
+                        <li>HTML SEMÂNTICO;</li>
+                        <li>GIT;</li>
+                        <li>INTERNET;</li>
+                        <li>SOFT SKILLS;</li>
+                        <li>GITHUB;</li>
+                        <li>Pesquisar como um dev;</li>
+                    </ol>
+            </div>
+            <div id="lista-a-aprender">
+                <h2>Lições aprendidas</h2>
+                    <ul id="licoes_a_aprender">
+                        <li>JavaScript;</li>
+                        <li>React;</li>
+                        <li>NodeJS;</li>
+                        <li>Python;</li>
+                        <li>Estrutura de dados;</li>
+                        <li>Algorítimos;</li>
+                        <li>Testes Unitários;</li>
+                        <li>Programação orientada a objetos;</li>
+                        <li>Arquitetura de Computadores e Redes;</li>
+                        <li>Banco de dados;</li>
+                    </ul>
+            </div>
+        </section>
+        <div class="clear"></div>
         <table>
             
         </table>
