Fix de acessibilidade, os Header devem seguir a ordem, H1 H2... nao se deve pular os numeros de titulo.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img id="minha_foto" src="rsz_meplayingbass.jpg" alt="One picture of me Igor playing bass.">
 
         <section>
-            <h3>Lições aprendidas na Trybe:</h3>
+            <h2>Lições aprendidas na Trybe:</h2>
             <ol id="licoes_aprendidas">
                 <li>Como operar o shell</li>
                 <li>Operando em diretórios e navegando neles usando Bash</li>
@@ -32,8 +32,8 @@
         </section>
 
         <section>
-            <h3>Lições que ainda vou aprender:</h3>
-            <ol id="licoes_a_aprender">
+            <h2>Lições que ainda vou aprender:</h2>
+            <Ul id="licoes_a_aprender">
                 <li>Lógica de programação</li>
                 <li>Trabalhar com Javascript</li>
                 <li>Trabalhar com React</li>
@@ -44,7 +44,7 @@
                 <li>Metodologias Ágeis</li>
                 <li>Várias lições de soft skills que irão contribuir pra me tornar uma pessoa melhor :D</li>
                 <li>Entre outras...</li>
-            </ol>
+            </Ul>
         </section>
 
 
