--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
             </ul>
         </section>
         <article id="lado-esquerdo">
-            <h2>Meu Aprendizado</h2>
-            <p>No dia 9 de novembro iniciei minha jornada na <a href="https://www.betrybe.com/" target="_blank">Trybe</a>, uma escola para pessoas que querem construir uma carreira como desenvolvedor full stack. O diferencial que me fez optar pela Trybe é o seu comprometimento com os alunos, no qual os mesmos podem optar pelo pagamento através do modelo de sucesso compartilhado.</p>
-            <p>Durante as três semanas iniciais aprendemos sobre os fundamentos do desenvolvimento web, Unix, Git, Github, funcionamento da internet, HTML e CSS. Realizamos a criação da primeiras páginas HTML, que são o primeiro passo para se tornar um desenvolvedor web full stack.</p>
+            <section>
+                <h2>Meu Aprendizado</h2>
+                <p>No dia 9 de novembro iniciei minha jornada na <a href="https://www.betrybe.com/" target="_blank">Trybe</a>, uma escola para pessoas que querem construir uma carreira como desenvolvedor full stack. O diferencial que me fez optar pela Trybe é o seu comprometimento com os alunos, no qual os mesmos podem optar pelo pagamento através do modelo de sucesso compartilhado.</p>
+                <p>Durante as três semanas iniciais aprendemos sobre os fundamentos do desenvolvimento web, Unix, Git, Github, funcionamento da internet, HTML e CSS. Realizamos a criação da primeiras páginas HTML, que são o primeiro passo para se tornar um desenvolvedor web full stack.</p>               
+            </section>
         </article>
         <aside id="lado-direito">
             <h2>Hard e Soft Skills</h2>
