--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </section>
   </div>
   <section id="artigo_aside">
-    <article classe="lado-esquerdo">
+    <article class="lado-esquerdo">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio
         quis officia perferendis. Esse consectetur tenetur aspernatur voluptas
@@ -79,7 +79,7 @@
         Molestiae sapiente non pariatur.
       </p>
     </article>
-    <aside classe="lado-direito">
+    <aside class="lado-direito">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio
         quis officia perferendis. Esse consectetur tenetur aspernatur voluptas
