side-a-side fix

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                 <li>Como alcançar um emprego de alto nível</li>
             </ul>
             <aside>
-                <article id="artigo">
+                <article id="artigo" class="lado-esquerdo">
                     <h3>Meu aprendizado na Trybe <em>so far</em>...</h3>
                     <p> Quando iniciei o curso há pouco tempo confesso que não imaginava que seria o que está sendo. Para falar a verdade, achei que seria muito menos impactante e olhem que só se passaram <strong>2 semanas!</strong><br> Atualmente eu já me sinto como um desenvolvedor web iniciante, realizando tarefas antes inimagináveis, como estruturar uma página em HTML estilizando com CSS e publicando ela através de pushs, commits e pull requests no Git/GitHub.<br></p>
                 </article>
-                <section>
+                <section class="lado-direito">
                     <h3>Por exemplo...</h3>
                     <img id="okay" src="okayhand.jpg" alt="ate agora tudo certo">
                     <p id="exemplo">Esses dias eu terminei meu web portfolio (cujo link você pode acessar por <a href="https://lhfmworker.github.io/" target="_blank">aqui</a>)</p>
