--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,73 +9,81 @@
 
     <title>Lessons learned</title>
 </head>
+
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas na Trybe</h1>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Sobre</a>
+        </nav>
     </header>
 
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Sobre</a>
-    </nav>
+    <main>
+        <section id="minhas_infos">
+            <img src="eu.jpg" alt="Foto de Carine Becker" id="minha_foto">
+            <a href="http://linkedin.com/in/carinebecker" target="_blank">Carine Becker</a>
+        </section>
 
-    <section id="minhas_infos">
-        <img src="eu.jpg" alt="Foto de Carine Becker" id="minha_foto">
-        <a href="http://linkedin.com/in/carinebecker" target="_blank">Carine Becker</a>
-    </section>
-    
-    <section id="licoes">
-        <table>
-            <tr>
-                <th>Lições aprendidas</th>
-                <th>Lições a aprender</th>
-            </tr>
-            <tr>
-                <td>
-                    <ol id="licoes_aprendidas">
-                        <li>Unix</li>
-                        <li>Bash</li>
-                        <li>GIT</li>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                        <li>Slack</li>
-                        <li>Zoom</li>
-                        <li>Empatia</li>
-                        <li>Trabalho em equipe</li>
-                    </ol>
-                </td>
+        <section id="licoes">
+            <table>
+                <tr>
+                    <th>Lições aprendidas</th>
+                    <th>Lições a aprender</th>
+                </tr>
+                <tr>
+                    <td>
+                        <ol id="licoes_aprendidas">
+                            <li>Unix</li>
+                            <li>Bash</li>
+                            <li>GIT</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>Slack</li>
+                            <li>Zoom</li>
+                            <li>Empatia</li>
+                            <li>Trabalho em equipe</li>
+                        </ol>
+                    </td>
 
-                <td>
-                    <ul id="licoes_a_aprender">
-                        <li>React</li>
-                        <li>Jest</li>
-                        <li>Metodologias ágeis</li>
-                        <li>RTL</li>
-                        <li>Redux</li>
-                        <li>React Hooks</li>
-                        <li>SQL</li>
-                        <li>MongoDB</li>
-                        <li>NodeJS</li>
-                        <li>SOLID</li>
-                    </ul>
-                </td>
-            </tr>
-        </table>
-    </section>
+                    <td>
+                        <ul id="licoes_a_aprender">
+                            <li>React</li>
+                            <li>Jest</li>
+                            <li>Metodologias ágeis</li>
+                            <li>RTL</li>
+                            <li>Redux</li>
+                            <li>React Hooks</li>
+                            <li>SQL</li>
+                            <li>MongoDB</li>
+                            <li>NodeJS</li>
+                            <li>SOLID</li>
+                        </ul>
+                    </td>
+                </tr>
+            </table>
+        </section>
 
-    <section id="learning-article">
-        <article>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatum aliquam corrupti fuga officiis at animi quisquam distinctio alias perspiciatis? Modi, molestiae! Aspernatur perferendis eveniet temporibus aut beatae. Mollitia, sunt. <br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, magni sunt, quia cupiditate quasi nemo similique quo deserunt voluptatibus at laborum explicabo accusamus! Rem, nam. Amet facilis praesentium aperiam eius!</p>
-        </article>
+        <section id="learning-article">
+            <article class="lado-esquerdo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatum aliquam corrupti fuga
+                    officiis at animi quisquam distinctio alias perspiciatis? Modi, molestiae! Aspernatur perferendis
+                    eveniet temporibus aut beatae. Mollitia, sunt. <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, magni sunt, quia cupiditate quasi nemo
+                    similique quo deserunt voluptatibus at laborum explicabo accusamus! Rem, nam. Amet facilis
+                    praesentium aperiam eius!</p>
+            </article>
 
-        <aside>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis, commodi nobis debitis earum ex quia tempora, accusamus consectetur fugiat, saepe soluta quasi! Neque doloremque alias commodi earum corporis, veniam architecto.</p>
-        </aside>
-    </section>
-
+            <aside class="lado-direito">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis, commodi nobis debitis earum ex quia
+                    tempora, accusamus consectetur fugiat, saepe soluta quasi! Neque doloremque alias commodi earum
+                    corporis, veniam architecto.</p>
+            </aside>
+        </section>
+    </main>
     <footer id="rodape">Made with ♡ by <a href="https://github.com/carinebecker">Carine Becker</a></footer>
 
 </body>
+
 </html>
