problema das listas resolvido e article adicionados

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
            </ul> 
         </nav>
     </header>
-    <div id="Licoes">
+    <section id="Licoes">
         <img id="minha_foto" src="https://scontent.fcgh8-1.fna.fbcdn.net/v/t1.0-9/119194541_155698762852429_2997436748445837010_n.jpg?_nc_cat=105&ccb=2&_nc_sid=09cbfe&_nc_eui2=AeELK4nposWDEPJXaFR-D8FHYOli3vEdICtg6WLe8R0gK2gLZ1p2Xz92_BMo1lzUdBcJK76wW_DvasBFqRfVMatf&_nc_ohc=DTlbb1m83S0AX-RU9Os&_nc_ht=scontent.fcgh8-1.fna&oh=9817100404817d0f500bd264536b4dad&oe=5FE1B35C">
         <a href="https://www.linkedin.com/in/victor-ricco/" target="_blank"><p>Victor Ricco</p></a>
         <h2>Licoes</h2>
@@ -49,6 +49,15 @@
             <li>CSS Responsive</li>
         </ul>
         </aside>
-        </div>
+        </section>
+        <article id="meuAprendizado">
+            <h2>Meu Aprendizado</h2>
+            <p>O mundo não é um mar de rosas; é um lugar sujo, um lugar cruel, que não quer saber o quanto você é durão. 
+                Vai botar você de joelhos e você vai ficar de joelhos para sempre se você deixar. 
+                Você, eu, ninguém vai bater tão forte como a vida, mas não se trata de bater forte. 
+                Se trata de quanto você aguenta apanhar e seguir em frente, o quanto você é capaz de aguentar e continuar tentando. 
+                É assim que se consegue vencer.<br>
+                Agora se você sabe do teu valor, então vá atrás do que você merece...</p>
+        </article>
   </body>
 </html>
