listas ol e ul uma ao lado da outra

--- a/index.html
+++ b/index.html
@@ -10,47 +10,54 @@
 		<header id="cabecalho">
       <h1 id="titulo">Lições aprendidas - Trybe</h1>
     </header>
-    <img id="minha_foto" src="./foto-Ivan.jpg" alt="minha-foto" width="300">
-    <a href="https://github.com/ivanrafael-dev" target="_blank">GitHub</a>
-    <section id="section">
-      <article id="article">
-        <h2>Meu Aprendizado</h2>
-        <p>Estou muito feliz até agora com o aprendizado junto com a família Trybe.</p>
-        <p>Aprendemos os camandos básicos do terminal linux e também sobre git e github e como fazer repositórios, clonar, commitar e hospedar páginas no GitPages.</p>
-        <p>Começamos os estudos de HTML e CSS, e HTML semântico, que realmente é uma coisa muito importante e interessante, além de ajudar em muito a organizar as idéias.</p>
-        <p>Tivemos também nessa semana algumas informações importantes sobre como será nosso auto-conhecimento, os 1:1 irão ajudar a alinharmos as idéias.</p>
-      </article>
-    </section>
-    <ol id="licoes_aprendidas">
-      <li>Unix</li>
-      <li>Bash</li>
-      <li>Shell</li>
-      <li>Git</li>
-      <li>GitHub</li>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Internet</li>
-      <li>HTML Semântico</li>
-      <li>Empatia</li>
-    </ol>
-    <ul id="licoes_a_aprender">
-      <li>JavaScript</li>
-      <li>DOM</li>
-      <li>Forms</li>
-      <li>CSS Responsive</li>
-      <li>ES6</li>
-      <li>SoftSkills</li>
-      <li>Unit Tests</li>
-      <li>React</li>
-      <li>Node</li>
-      <li>SQL</li>
-    </ul>
-    <aside>
-      <h3>Primeiro Projeto</h3>
-      <p>Está sendo muito legal colocar o aprendizado em prática, o projeto ajuda a reforçar os temas além de nos colocar em prática com o Git</p>
-    </aside>
-    <footer id="rodape">
+    <main id="content">
+      <img id="minha_foto" src="./foto-Ivan.jpg" alt="minha-foto" width="300">
+      <a href="https://github.com/ivanrafael-dev" target="_blank">GitHub</a>
+      <section id="section">
+        <article id="article">
+          <h2>Meu Aprendizado</h2>
+          <p>Estou muito feliz até agora com o aprendizado junto com a família Trybe.</p>
+          <p>Aprendemos os camandos básicos do terminal linux e também sobre git e github e como fazer repositórios, clonar, commitar e hospedar páginas no GitPages.</p>
+          <p>Começamos os estudos de HTML e CSS, e HTML semântico, que realmente é uma coisa muito importante e interessante, além de ajudar em muito a organizar as idéias.</p>
+          <p>Tivemos também nessa semana algumas informações importantes sobre como será nosso auto-conhecimento, os 1:1 irão ajudar a alinharmos as idéias.</p>
+        </article>
+      </section>
+      <section id="learned_lessons">
+        <ol id="licoes_aprendidas">
+          <li>Unix</li>
+          <li>Bash</li>
+          <li>Shell</li>
+          <li>Git</li>
+          <li>GitHub</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Internet</li>
+          <li>HTML Semântico</li>
+          <li>Empatia</li>
+        </ol>
+      </section>
+      <section id="lessons_to_learn">
+        <ul id="licoes_a_aprender">
+          <li>JavaScript</li>
+          <li>DOM</li>
+          <li>Forms</li>
+          <li>CSS Responsive</li>
+          <li>ES6</li>
+          <li>SoftSkills</li>
+          <li>Unit Tests</li>
+          <li>React</li>
+          <li>Node</li>
+          <li>SQL</li>
+        </ul>
+      </section>     
+      <aside>
+        <h3>Primeiro Projeto</h3>
+        <p>Está sendo muito legal colocar o aprendizado em prática, o projeto ajuda a reforçar os temas além de nos colocar em prática com o Git</p>
+      </aside>
+      <footer id="rodape">
 
-    </footer>
+      </footer>
+    </main>
+    
   </body>
 </html>
