--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <li></li>
     </ul>
   </main>
-  <footer>
+  <footer id="rodape">
     <h4>Cristiano L Duarte</h4>
   </footer>
 </body>   
